--- a/assets/scss/components/_c-hero.scss
+++ b/assets/scss/components/_c-hero.scss
@@ -106,9 +106,24 @@
 					}
 				}
 			}
+
 			&__link {
-				display: block;
+				display: flex;
+				justify-content: start;
+				align-items: center;
 				margin: 40px 0px;
+
+				&-btn {
+					display: inline-block;
+					margin-right: 1rem;
+					font-size: 2rem;
+					color: white;
+					height: 50px;
+					width: 50px;
+					line-height: 50px;
+					text-align: center;
+					border-radius: 100%;
+				}
 			}
 		}
 	}
